Updated css file update overlap issue.

--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,7 @@
     position: sticky;
     top: 0%;
     background-color: var(--primary-header-color);
+    z-index: 3;
 }
 
 .navbar {
